--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="app">
         <nav id="menu">
-            <ul id="menu-list"></ul>
+            <ul id="menu-list"><!-- List of exercise links displayed here --></ul>
         </nav>
 
         <main id="exercises">
