--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         </main>
     </div>
 
+    <script src="JavaScript/exercise1c.js"></script>
+    <script src="JavaScript/exercise1b.js"></script>
+    <script src="JavaScript/exercise1a.js"></script>
     <script src="JavaScript/exercise0.js"></script>
     <script src="app.js"></script>
 </body>
