add gitignore, simplify comments in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </nav>
 
         <main id="exercises">
-            <!-- Exercises will be displayed here -->
+            <!-- Exercises displayed here -->
         </main>
     </div>
 
