--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </main>
     </div>
 
+    <script src="JavaScript/exercise3.js"></script>
     <script src="JavaScript/exercise2.js"></script>
     <script src="JavaScript/exercise1c.js"></script>
     <script src="JavaScript/exercise1b.js"></script>
