reuse exercise2.js for Task 6 instead of a new file - add README for the branch

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         </main>
     </div>
 
-    <script src="JavaScript/exercise3.js"></script>
-    <script src="JavaScript/exercise2.js"></script>
+    <script src="JavaScript/exercise2&3.js"></script>
     <script src="JavaScript/exercise1c.js"></script>
     <script src="JavaScript/exercise1b.js"></script>
     <script src="JavaScript/exercise1a.js"></script>
