proper way to add scripts in HTML using defer instead of putting the tag at the end

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>JS Exercises</title>
+
+    <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- js -->
+    <script src="JavaScript/exercise2&3.js" defer></script>
+    <script src="JavaScript/exercise1c.js" defer></script>
+    <script src="JavaScript/exercise1b.js" defer></script>
+    <script src="JavaScript/exercise1a.js" defer></script>
+    <script src="JavaScript/exercise0.js" defer></script>
+    <script src="app.js" defer></script>
 </head>
+
 <body>
     <div id="app">
         <nav id="menu">
@@ -17,12 +29,5 @@
             <!-- Exercises displayed here -->
         </main>
     </div>
-
-    <script src="JavaScript/exercise2&3.js"></script>
-    <script src="JavaScript/exercise1c.js"></script>
-    <script src="JavaScript/exercise1b.js"></script>
-    <script src="JavaScript/exercise1a.js"></script>
-    <script src="JavaScript/exercise0.js"></script>
-    <script src="app.js"></script>
 </body>
 </html>
