refactor into MVC arch and prep exercise 4

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <!-- js -->
-    <script src="JavaScript/exercise2&3.js" defer></script>
+    <script src="JavaScript/exercise_2_3_4/exercise2&374.js" defer></script>
     <script src="JavaScript/exercise1c.js" defer></script>
     <script src="JavaScript/exercise1b.js" defer></script>
     <script src="JavaScript/exercise1a.js" defer></script>
