--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/exercise5.css">
 
     <!-- js -->
     <script type="module" src="app.js" defer></script>
